crates/nx-syntax/tests/fixtures/invalid/unclosed_brace.nx
// Unclosed brace
fn foo() {
    let x = 42
